Bug 285069 - Cannot add alternate subject matches.
Summary: Cannot add alternate subject matches.
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: Wireless (other bugs)
Version First Reported In: 0.9
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-27 09:23 UTC by madcatx
Modified: 2011-10-27 19:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description madcatx 2011-10-27 09:23:11 UTC
Version:           0.9 (using KDE 4.7.2) 
OS:                Linux

When I try to add alternate subject matches in Wireless security settings, I can click the "..." button, but I cannot type anything to the entry field and the control buttons are all greyed out. When I manually add alternate matches to the respective config file in /etc/NetworkManager/system-connections/<conn>, I can see them and I can remove them, I just cannot add any.

Reproducible: Always

Steps to Reproduce:
Try to add alternate matches in the Wireless config window.

Actual Results:  
Not possible to do so.

Expected Results:  
Added alternate matches.

I use nm09_beta2(20111021) as packaged and distributed by Arch Linux.
Comment 1 Lamarque V. Souza 2011-10-27 19:32:48 UTC
Git commit 0621b0126a18fb663a6c57b2e2991bd8510c4260 by Lamarque V. Souza.
Committed on 27/10/2011 at 21:31.
Pushed by lvsouza into branch 'master'.

Add tooltip explaining how to use wifi security's alternate subject
matches in Plasma NM's wifi edit dialog.

BUG: 285069

M  +4    -0    libs/ui/editlistdialog.cpp
M  +1    -0    libs/ui/editlistdialog.h
M  +1    -0    libs/ui/security/peapwidget.cpp
M  +1    -0    libs/ui/security/tlswidget.cpp
M  +1    -0    libs/ui/security/ttlswidget.cpp

http://commits.kde.org/networkmanagement/0621b0126a18fb663a6c57b2e2991bd8510c4260
Comment 2 Lamarque V. Souza 2011-10-27 19:33:22 UTC
Git commit 0d0e2f00cc38f050d053d0e5bd7405009fc8c60f by Lamarque V. Souza.
Committed on 27/10/2011 at 21:31.
Pushed by lvsouza into branch 'nm09'.

Add tooltip explaining how to use wifi security's alternate subject
matches in Plasma NM's wifi edit dialog.

BUG: 285069
(cherry picked from commit 0621b0126a18fb663a6c57b2e2991bd8510c4260)

M  +4    -0    libs/ui/editlistdialog.cpp
M  +1    -0    libs/ui/editlistdialog.h
M  +1    -0    libs/ui/security/peapwidget.cpp
M  +1    -0    libs/ui/security/tlswidget.cpp
M  +1    -0    libs/ui/security/ttlswidget.cpp

http://commits.kde.org/networkmanagement/0d0e2f00cc38f050d053d0e5bd7405009fc8c60f