libs/ui/security/tlswidget.cpp
@@ -285,6 +285,7 @@ void TlsWidget::showAltSubjectMatchesEditor()
     EditListDialog editor;
     editor.setItems(leAltSubjectMatches->text().remove(QLatin1Char(' ')).split(QLatin1Char(','), QString::SkipEmptyParts));
     editor.setCaption(i18n("Alternative Subject Matches"));
+    editor.setToolTip(i18n("<qt>This entry must be one of:<ul><li>DNS: &lt;name or ip address&gt;</li><li>EMAIL: &lt;email&gt;</li><li>URI: &lt;uri, e.g. http://www.kde.org&gt;</li><ul></qt>"));
     editor.setValidator(d->altSubjectValidator);
     if (editor.exec() == QDialog::Accepted) {
         leAltSubjectMatches->setText(editor.items().join(QLatin1String(", ")));
